--- a/dev/css/_header.scss
+++ b/dev/css/_header.scss
@@ -47,8 +47,12 @@
     box-shadow: 0 4px 5px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
     outline: none !important;
+    border: none;
+    max-width: 178px;
+    width: 100%;
 
     .btn {
+      border: none;
       font-weight: 600;
       font-size: 14px;
       line-height: 19px;
@@ -57,94 +61,27 @@
       color: #FFFFFF;
       outline: none !important;
     }
-
-    .btn:visited, .btn:focus, .btn:active, .btn:hover, .btn:focus-within {
-      outline: none !important;
-    }
-
   }
-
-  ////////select
-
-  .custom-select {
-    position: relative;
-    width: 128px;
-    padding: 0;
-    height: auto;
-    background: transparent;
-    border: none;
+  .btn:visited, .btn:focus, .btn:active, .btn:hover, .btn:focus-within {
+    outline: none !important;
+    box-shadow: none;
+  }
+  .button:visited, .button:focus, .button:active, .button:hover, .button:focus-within {
     outline: none !important;
   }
 
-  .custom-select select {
-    display: none; /*hide original SELECT element: */
+  .dropdown-menu {
+    left: -24px !important;
   }
-
-  .select-selected {
-    background-color: transparent;
-  }
-
-  /* Style the arrow inside the select element: */
-  .select-selected:after {
-    position: absolute;
-    content: "";
-    top: 17px;
-    right: 0;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 8px 5.5px 0 5.5px;
-    border-color: #6B4184 transparent transparent transparent;
-  }
-
-  /* Point the arrow upwards when the select box is open (active): */
-  .select-selected.select-arrow-active:after {
-    border-style: solid;
-    border-width: 0 6px 8px 6px;
-    border-color: transparent transparent #6B4184 transparent;
-    top: 17px;
-  }
-
-  /* style the items (options), including the selected item: */
-  .select-items div, .select-selected {
-    outline: none !important;
-    font-weight: 600;
-    font-size: 15px;
-    line-height: 20px;
-    color: #6B4184;
-    width: 100%;
-    padding: 10px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    text-align: left;
-  }
-
-  /* Style items (options): */
-  .select-items {
-    position: absolute;
-    background-color: #fff;
-    top: 125%;
-    left: 0;
-    right: -44px;
-    z-index: 99;
-  }
-
-  /* Hide the items when the select box is closed: */
-  .select-hide {
-    display: none;
-  }
-
-  .select-items div:hover, .same-as-selected {
-    background-color: rgba(0, 0, 0, 0.1);
-  }
-
-  //////////
 
   .top {
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+
+  .social {
+    display: none;
   }
 
   // c крестиком
@@ -158,7 +95,7 @@
 
     span {
       position: absolute;
-      background-color: #1D1D1D;
+      background: #5C3971;
       width: 100%;
       height: 2px;
       top: 50%;
@@ -167,7 +104,7 @@
       opacity: 1;
       &:before {
         position: absolute;
-        background: #1D1D1D;
+        background: #5C3971;
         width: 18px;
         height: 2px;
         bottom: 5px;
@@ -176,7 +113,7 @@
       }
       &:after{
         position: absolute;
-        background: #1D1D1D;
+        background: #5C3971;
         width: 18px;
         height: 2px;
         top: 5px;
@@ -191,14 +128,14 @@
       background-color: transparent;
       transition: all .3s ease-in-out;
       &:before {
-        background-color: #1D1D1D;
+        background: #5C3971;
         transform: rotate(-45deg);
         top: 0;
         position: absolute;
         transition: all .3s ease-in-out;
       }
       &:after {
-        background-color: #1D1D1D;
+        background: #5C3971;
         transform: rotate(45deg);
         top: 0;
         position: absolute;
@@ -210,11 +147,57 @@
 
   ///media
 
-  @media (max-width: 1146px) {
+  @media (max-width: 915px) {
+
+    .social {
+      display: block;
+
+      .social-icons {
+        display: flex;
+        justify-content: center;
+
+        a:hover {
+          text-decoration: none;
+        }
+
+        .circle-big {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 45px;
+          height: 45px;
+          border-radius: 50%;
+          background: linear-gradient(90deg, rgba(156, 132, 192, 0.2) 1.35%, rgba(102, 246, 255, 0.2) 100%);
+          margin: 15px 10px 0 10px;
+        }
+
+        .circle-small {
+          width: 30px;
+          height: 30px;
+          border-radius: 50%;
+          background: linear-gradient(90deg, #7E5895 0%, #6B4184 100%);
+          border: 1px solid #FFFFFF;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          .icon-facebook {
+            font-size: 16px;
+          }
+
+          .icon-jam-instagram {
+            font-size: 24px;
+          }
+
+          .icon-youtube {
+            font-size: 18px;
+          }
+        }
+      }
+    }
 
     .header__inner {
       display: flex;
-
       flex-wrap: wrap;
       flex-direction: column;
       align-items: inherit;
@@ -222,7 +205,7 @@
 
     .main-nav {
       display: none;
-      padding-top: 14px;
+      padding-top: 15px;
     }
 
     .menu li {
@@ -236,18 +219,13 @@
     .menu {
       display: block;
       text-align: center;
+      padding-bottom: 15px;
     }
 
-    .menu a {
-      font-weight: 700;
-      text-transform: uppercase;
-      letter-spacing: -.02em;
-      font-style: normal;
-      font-size: 15px;
-      color: #000000;
-      font-family: $font_text;
-      display: block;
-      margin-bottom: 18px;
+    .button {
+      margin-top: 11px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .toggle-menu {
@@ -255,26 +233,16 @@
     }
   }
 
-  @media (max-width: 625px) {
-    .address p {
-      display: flex;
-    }
-
-  }
-
   @media (max-width: 460px) {
-    .logo {
-      max-width: 80px;
-      max-height: 30px;
-    }
-    .address p {
-      font-size: 12px;
-      margin: 0 0 0 10px;
+    top: 0;
+
+    .container {
+      padding: 0 !important;
     }
 
-    .phone {
-      margin-left: 10px;
-      font-size: 13px;
+    .logo {
+      max-width: 102px;
+      max-height: 26px;
     }
   }
 
