--- a/dev/css/_services.scss
+++ b/dev/css/_services.scss
@@ -1,4 +1,12 @@
 .services {
+  background: #ffffff;
+  background: url("../../public/images/bg-services.png") top left no-repeat;
+  background-size: 100% 100%;
+  z-index: 2;
+  position: relative;
+  margin-top: -190px;
+  padding-top: 185px;
+  padding-bottom: 112px;
 
   .caption {
     font-weight: 800;
@@ -7,7 +15,12 @@
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
-    margin-bottom: 40px;
+    width: 785px;
+    margin: auto auto 160px;
+  }
+
+  .mobile-cleaning {
+    display: none;
   }
 
   .items {
@@ -62,7 +75,7 @@
   }
 
   .left {
-    //background: linear-gradient(0deg, rgba(145, 121, 158, 0.67), rgba(145, 121, 158, 0.67)), url("../../public/images/service1.png");
+    cursor: pointer;
 
     .name {
       border-radius: 0 0 20px 20px;
@@ -72,22 +85,22 @@
   }
 
   .right {
-    //background: linear-gradient(0deg, rgba(145, 121, 158, 0.67), rgba(145, 121, 158, 0.67)), url("../../public/images/service3.png");
+    cursor: pointer;
 
     .name {
-      border-radius: 20px 20px 0 0 ;
+      border-radius: 20px 20px 0 0;
       top: 128px;
       right: -128px;
     }
   }
 
-
   .center {
+    transform: scale(1.2) !important;
+    transition: .3s !important;
     border-radius: 20px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.6);
     width: 603px;
     height: 316px;
-    //background: url("../../public/images/service2.png");
     position: absolute;
     left: 0;
     right: 0;
@@ -108,6 +121,7 @@
       right: 0;
       top: -72px;
       text-align: center;
+      margin-bottom: 20px;
 
       .title {
         font-weight: 800;
@@ -168,6 +182,200 @@
     .name {
       display: none;
     }
+  }
+
+  //media
+
+  @media (max-width: 991px) {
+
+    .caption {
+      width: 100%;
+      text-align: center;
+    }
+  }
+
+  @media (max-width: 860px) {
+    background: url("../../public/images/bg-ser-mob.png") top left no-repeat;
+    background-size: cover;
+    margin-top: -120px;
+    padding-top: 80px;
+    padding-bottom: 30px;
+
+    .caption {
+      margin-bottom: 40px;
+    }
+
+    .items {
+      display: none;
+    }
+
+    .mobile-cleaning {
+      display: flex;
+      flex-direction: column;
+
+      .image-mob {
+        max-width: 386px;
+        max-height: 386px;
+        display: inline-block;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.6);
+        border-radius: 20px;
+
+        img {
+          border-radius: 20px;
+        }
+      }
+
+      .item {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: none;
+
+        .info {
+          display: inline-block;
+          background: #6B4184;
+          box-shadow: 0 4px 20px rgba(0, 0, 0, 0.6);
+          border-radius: 20px;
+          padding: 32px 25px 22px 33px;
+          position: relative;
+          text-align: center;
+          margin-left: -20px;
+          margin-bottom: 20px;
+
+          .title {
+            font-weight: 800;
+            font-size: 16px;
+            line-height: 176.68%;
+            text-transform: uppercase;
+            color: #FFFFFF;
+            margin-bottom: 50px;
+            position: relative;
+            text-align: left;
+
+            &:after {
+              content: "";
+              width: 145px;
+              height: 1px;
+              background: #FFFFFF;
+              position: absolute;
+              left: 0;
+              bottom: -25px;
+            }
+          }
+
+          .text {
+            font-size: 13px;
+            line-height: 176.68%;
+            color: #FFFFFF;
+            max-width: 297px;
+            width: 100%;
+            margin-bottom: 36px;
+            text-align: left;
+          }
+
+          .button {
+            background: #6B4184;
+            box-shadow: 0 4px 5px rgba(0, 0, 0, 0.1);
+            border-radius: 20px;
+            border: 1px solid #fff;
+            outline: none !important;
+
+            .btn {
+              font-weight: 600;
+              font-size: 14px;
+              line-height: 19px;
+              text-align: center;
+              color: #FFFFFF;
+              padding: 11px 85px;
+              display: inline-block;
+              outline: none !important;
+            }
+
+            .btn:visited, .btn:focus, .btn:active, .btn:hover, .btn:focus-within {
+              outline: none !important;
+            }
+          }
+
+        }
+      }
+    }
+  }
+
+  @media (max-width: 768px) {
+    .caption {
+      margin-bottom: 20px;
+      line-height: 40px;
+      font-size: 24px;
+    }
+  }
+
+  @media (max-width: 705px) {
+   .mobile-cleaning .item .info {
+
+      .title {
+        margin-bottom: 20px;
+
+        &:after {
+          bottom: -10px;
+        }
+      }
+
+      .text {
+        margin-bottom: 15px;
+      }
+    }
+  }
+
+  @media (max-width: 660px) {
+    margin-top: 205px;
+  }
+
+  @media (max-width: 576px) {
+    margin-top: 158px;
+    padding-top: 155px;
+
+    .caption {
+      margin-bottom: 30px;
+    }
+
+    .mobile-cleaning .item {
+      flex-direction: column;
+      margin-bottom: 25px;
+
+      .info {
+        margin: -20px 0 0;
+        text-align: center;
+        .title, .text {
+          text-align: center;
+        }
+        .title:after {
+          right: 0;
+          margin: auto;
+        }
+      }
+    }
+  }
+
+  @media (max-width: 500px) {
+    margin-top: 125px;
+  }
+
+  @media (max-width: 460px) {
+    margin-top: 92px;
+  }
+
+  @media (max-width: 460px) {
+    margin-top: 65px;
+  }
+
+  @media (max-width: 360px) {
+    margin-top: 35px;
+  }
+
+  @media (max-width: 320px) {
+    margin-top: 0;
   }
 
 }
