--- a/dev/css/main.scss
+++ b/dev/css/main.scss
@@ -6,7 +6,7 @@ $caption_text: Cera Pro, sans-serif;
 @import "why";
 @import "services";
 @import "recommend";
-@import "use";
+@import "appeal";
 @import "reviews";
 @import "certificates";
 @import "cooperation";
@@ -212,12 +212,11 @@ button:visited, button:focus, button:active, button:hover, button:focus-within {
 }
 
 .devgen a {
-  font-family: $font_text;
   font-size: 14px;
   line-height: 1.6;
   font-weight: 400;
   letter-spacing: -.02em;
-  color: rgba(0, 0, 0, 0.7);
+  color: #6B4184;
   &:hover {
     text-decoration: none;
   }
@@ -227,122 +226,99 @@ button:visited, button:focus, button:active, button:hover, button:focus-within {
 /////////////////////POPUP///////////////////
 
 .popup {
-  background: #FFFFFF;
+  //background: #FFFFFF;
   max-width: 538px;
   margin: 0 auto;
   text-align: center;
   position: relative;
-  padding: 40px 0 40px 0;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
 
-  .logo {
-    max-width: 100px;
-    max-height: 50px;
-    margin: 0 auto 20px auto;
+  button.mfp-close {
+    margin-right: 30px;
+    margin-top: 12px;
   }
 
   form {
-    display: inline-block;
-    background: #fff;
-    padding: 0 40px 0 40px;
+    background: rgba(255, 255, 255, 0.9);
+    box-shadow: 5px 4px 20px rgba(0, 0, 0, 0.35);
+    border-radius: 50px;
+    padding: 85px 50px 45px 50px;
     text-align: center;
+    z-index: 2;
 
     .form-title {
-      font-family: "Lato", sans-serif;
-      font-style: normal;
-      font-weight: bold;
-      font-size: 13px;
-      line-height: 151.5%;
+      font-weight: 800;
+      font-size: 20px;
+      line-height: 27px;
       text-align: center;
-      letter-spacing: 0.1em;
-      color: #000;
+      color: #5C3971;
       margin-bottom: 20px;
     }
 
-    .form-text {
-      font-family: "Lato", sans-serif;
-      font-style: normal;
-      font-weight: bold;
-      font-size: 12px;
-      line-height: 151.5%;
+    p {
+      font-size: 14px;
+      line-height: 19px;
       text-align: center;
-      letter-spacing: 0.1em;
-      color: #000;
-      margin-top: 20px;
+      color: #311C53;
     }
 
     input {
-      display: block;
+      padding: 7px 5px;
       width: 100%;
-      min-height: 42px;
-      padding: 9px 0;
-      font-size: 15px;
-      font-weight: 500;
-      line-height: 24px;
-      letter-spacing: -.02em;
-      border-radius: 0;
+      display: block;
       border: none;
-      border-bottom: 1px solid #08203E;
-      font-family: $font_text;
-      font-style: normal;
+      border-bottom: 1px solid #7E5895;
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 19px;
+      text-transform: uppercase;
+      color: #5C3971;
       background: transparent;
-      outline: none;
-      color: #000;
+      margin-bottom: 35px;
     }
 
     input[type="text"] {
-      margin-bottom:20px;
-    }
-
-    input[type="tel"] {
-      margin-bottom: 20px;
+      margin-bottom:24px;
     }
 
     input:focus {
-      outline: none;
+      outline: none !important;
     }
 
-    input::-webkit-input-placeholder { color: #000; }
-    input::-ms-input-placeholder { color: #000; }
-    input::-ms-input-placeholder { color: #000; }
-    input::placeholder { color: #000; }
-
-  button {
-    display: inline-block;
-    padding: 10px 30px;
-    font-size: 12px;
-    line-height: 1.5;
-    border: 1px solid #c4956a;
-    font-family: $font_text;
-    font-weight: 700;
-    letter-spacing: -.02em;
-    text-transform: uppercase;
-    text-align: center;
-    background-color: #c4956a;
-    color: #FFFFFF;
-    border-radius: 0;
-    &:hover {
-      background-color: transparent;
-      color: #c4956a;
+    input::-webkit-input-placeholder {
+      color: #5C3971;
     }
-  }
+    input::-ms-input-placeholder {
+      color: #5C3971;
+    }
+    input::-ms-input-placeholder {
+      color: #5C3971;
+    }
+    input::placeholder {
+      color: #5C3971;
+    }
 
-    .social {
-      display: flex;
-      width: 100%;
-      justify-content: space-evenly;
-
-      a {
-        &:hover {
-          text-decoration: none;
+    button {
+      background: #6B4184;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+      border-radius: 30px;
+      margin-top: 20px;
+      border: 1px solid #6B4184;
+      .btn {
+        font-weight: 600;
+        font-size: 17px;
+        line-height: 23px;
+        text-align: center;
+        color: #FFFFFF;
+        padding: 13px 43px;
+      }
+      &:hover {
+        transition: .2s;
+        background: #fff;
+        .btn {
+          color: #6B4184;
         }
       }
-
-      span {
-        font-size: 30px;
-      }
     }
-
   }
 
   ///media
