add second lending

--- a/dev/css/main.scss
+++ b/dev/css/main.scss
@@ -7,9 +7,9 @@ $caption_text: Cera Pro, sans-serif;
 @import "services";
 @import "recommend";
 @import "appeal";
-@import "reviews";
-@import "certificates";
-@import "cooperation";
+@import "advantages";
+@import "clean-support";
+@import "work";
 @import "gallery";
 @import "footer";
 
