--- a/dev/css/_banner.scss
+++ b/dev/css/_banner.scss
@@ -1,3 +1,7 @@
+.supporting {
+  background: url("../../public/images/bg-support.png") top left no-repeat !important;
+  background-size: 100% 100% !important;
+}
 
 .banner {
   position: relative;
@@ -28,7 +32,7 @@
     font-size: 28px;
     line-height: 186.68%;
     color: rgba(17, 5, 52, 0.8);
-    max-width: 790px;
+    max-width: 840px;
     margin: 0 0 35px;
   }
 
